# codon-encoder-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
contracts/: README.md
contracts/openapi/: openapi.yaml
contracts/python/: __init__.py  client.py  examples.py  models.py
contracts/typescript/: client.ts  examples.ts  index.ts  types.ts
docs/: API.md  FORMATS.md
scripts/: deploy.sh  generate_dummy_model.py  health_check.py
server/: __init__.py  constants.py  exceptions.py  inference_codon.py  logging_config.py
server/utils/: __init__.py  codon_basin_counter.py  hiv_codon_analysis.py
tests/: __init__.py  conftest.py  test_api_basic.py  test_model_loader.py  test_server.py
visualizer/: CLAUDE.md  __init__.py  config.py  model_loader.py  requirements.txt  run.py  server.py
visualizer/static/: index.html
visualizer/static/css/: style.css
visualizer/static/js/: api.js  geometry.js  globals.js  main.js  scene.js  ui.js
